# minicheetah3Dvisulization

./: README.md  Ubuntu_18.04_PCL_1.11.0_install.sh  leg_control_data_lcmt.h  rtabmap.launch
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/launch/: pointcloud.launch
beginner_tutorials/lcm/: pcl_type.lcm
beginner_tutorials/pcl/: pcl_type.hpp  pcl_type.lcm
beginner_tutorials/src/: leglistener.cpp  pointcloudlistener.cpp
lcm_to_ros/autosrc/: CMakeLists.txt  example_topic_republisher.cpp  leg_control_data_republisher.cpp  other_topic_republisher.cpp
lcm_to_ros/exlcm/: example_type.hpp  leg_control_data_lcmt.hpp  simple_channel.hpp
lcm_to_ros/exlcm_rehash/: example_type.hpp
lcm_to_ros/launch/: example_republishers.launch  leg_republishers.launch
lcm_to_ros/lcm/: leg_control_data_lcmt.lcm
lcm_to_ros/msg/: example_type.msg  simple_channel.msg
lcm_to_ros/repub_configs/: leg_republishers.cfg
new_joint_pub/: CMakeLists.txt  package.xml
new_joint_pub/launch/: joint_state.launch
new_joint_pub/msg/: leg_control_data_lcmt.msg
new_joint_pub/src/: state_publisher.cpp
realsense-ros/realsense2_camera/launch/: rs_pointcloud.launch  rs_rtabmap.launch
realsense-ros/realsense2_camera/launch/includes/: nodelet.launch.xml
realsense/realsense2_camera/launch/: mini_cheetah_simple_v2.urdf  rs_rgbd.launch  rs_rtabmap.launch  rs_tf.sh
